--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-	"e2e": "ng e2e",
-	"deploy": "ng build --prod --output-path docs --base-href ijustgotmoney"
+    "e2e": "ng e2e",
+    "deploy": "ng build --prod --output-path docs --base-href ijustgotmoney"
   },
   "private": true,
   "dependencies": {
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "6.1.2",
     "@angular/platform-browser-dynamic": "6.1.2",
     "@angular/router": "6.1.2",
+    "@angular/material": "^6.0.1",
     "core-js": "2.5.3",
     "rxjs": "6.2.2",
     "zone.js": "0.8.26"
